syntax = "proto3";

package api.v1;

import "proto/api/v1/block.proto";

option go_package = "github.com/syjn99/leanView/backend/gen/proto/api/v1;apiv1";

// MonitoringService provides real-time monitoring data for all connected clients
service MonitoringService {
  // Get the latest block header from all connected clients
  rpc GetAllClientsHeads(GetAllClientsHeadsRequest) returns (GetAllClientsHeadsResponse);
}

// ClientHead represents a client's current head block
message ClientHead {
  string client_label = 1;      // Client label/name from config
  string endpoint_url = 2;       // Client endpoint URL
  bool is_healthy = 3;           // Whether the client is currently healthy
  BlockHeader block_header = 4;  // The head block (may be null if unhealthy)
  string block_root = 5;         // Hex encoded block root
  int64 last_update_ms = 6;      // Unix timestamp in milliseconds of last update
}

// GetAllClientsHeadsRequest - fetch heads from all clients
message GetAllClientsHeadsRequest {
  // Empty - returns all clients' current heads
}

message GetAllClientsHeadsResponse {
  repeated ClientHead client_heads = 1;
  int32 total_clients = 2;
  int32 healthy_clients = 3;
}
